Modify select field scss

--- a/src/components/common/Form/_form.scss
+++ b/src/components/common/Form/_form.scss
@@ -144,16 +144,16 @@ input.is-invalid+.toggle-pass {
 
 .select-field.w-100.css-2b097c-container.is-invalid {
   & .css-yk16xz-control {
-    border-color: #f86c6b !important;
+    border-color: #dc3545 !important;
     padding-right: calc(1.5em + 0.75rem);
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23f86c6b' viewBox='-2 -2 7 7'%3e%3cpath stroke='%23f86c6b' d='M0 0l3 3m0-3L0 3'/%3e%3ccircle r='.5'/%3e%3ccircle cx='3' r='.5'/%3e%3ccircle cy='3' r='.5'/%3e%3ccircle cx='3' cy='3' r='.5'/%3e%3c/svg%3E");
     background-repeat: no-repeat;
-    background-position: center right calc(0.375em + 0.1875rem);
+    background-position: 96% calc(0.4em + 0.4rem);
     background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
     min-height: 2.6rem !important;
     transition: none;
 
-    & .css-1hb7zxy-IndicatorsContainer {
+    & .css-1wy0on6 {
       display: none;
     }
   }
@@ -165,12 +165,12 @@ input.is-invalid+.toggle-pass {
     padding-right: calc(1.5em + 0.75rem);
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%2328a745' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
     background-repeat: no-repeat;
-    background-position: center right calc(0.375em + 0.1875rem);
+    background-position: 96% calc(0.4em + 0.4rem);
     background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
     min-height: 2.6rem !important;
     transition: none;
 
-    & .css-1hb7zxy-IndicatorsContainer {
+    & .css-1wy0on6 {
       display: none;
     }
   }
