--- a/src/components/common/Form/_form.scss
+++ b/src/components/common/Form/_form.scss
@@ -11,6 +11,7 @@ input.text-field {
 .toggle-pass {
   position: absolute;
   right: 30px;
+  top: 128px;
   font-size: 18px;
   cursor: pointer;
   transition: all .1s ease-in;
@@ -146,7 +147,7 @@ input.is-invalid+.toggle-pass {
   & .css-yk16xz-control {
     border-color: #dc3545 !important;
     padding-right: calc(1.5em + 0.75rem);
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23f86c6b' viewBox='-2 -2 7 7'%3e%3cpath stroke='%23f86c6b' d='M0 0l3 3m0-3L0 3'/%3e%3ccircle r='.5'/%3e%3ccircle cx='3' r='.5'/%3e%3ccircle cy='3' r='.5'/%3e%3ccircle cx='3' cy='3' r='.5'/%3e%3c/svg%3E");
+    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23dc3545' viewBox='-2 -2 7 7'%3E%3Cpath stroke='%23dc3545' d='M0 0l3 3m0-3L0 3'/%3E%3Ccircle r='.5'/%3E%3Ccircle cx='3' r='.5'/%3E%3Ccircle cy='3' r='.5'/%3E%3Ccircle cx='3' cy='3' r='.5'/%3E%3C/svg%3E");
     background-repeat: no-repeat;
     background-position: 96% calc(0.4em + 0.4rem);
     background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
