Modify select field scss

--- a/src/components/common/Form/_form.scss
+++ b/src/components/common/Form/_form.scss
@@ -24,10 +24,12 @@ input.text-field {
 
 input.is-valid+.toggle-pass {
   right: 50px;
+  top: 148px;
 }
 
 input.is-invalid+.toggle-pass {
   right: 50px;
+  top: 148px;
 }
 
 //Checkbox
